<resources>
    <string name="app_name">ISH Q&amp;A</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen_img">SplashScreen ImageView</string>
    <string name="start_now">Start Now</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="icon">Icon</string>
    <string name="indicator">Indicator</string>
    <string name="ask">Ask</string>
    <string name="error_mesagge">Error</string>
    <string name="delete_q">Delete?</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="delete_question_q">Do you want delete this question ?</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="errror_ocured">An error occurred</string>
    <string name="question_has_been_added">The question has been added</string>


    <string name="internal_server_error">Internal Server Error</string>

    <string name="learn">Learn</string>

    <string name="manage_interview">Manage an interview</string>

    <string name="contribute">Contribute</string>

    <string name="learn_desc">"Read articles from the internet about suggested topics "</string>

    <string name="manage_interview_desc">"Allows you to establish and sustain an interview or to create a set of questions "</string>

    <string name="contribute_desc">Add or answer questions</string>

    <string name="no_items">NO ITEMS</string>
    <string name="view_more">VIEW MORE</string>
    <string name="please_click_again_exit">Please click again to exit</string>

    //items
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="Android">Android</string>
    <string name="ios">iOS</string>
    <string name="swift">Swift</string>
    <string name="java_script">Java Script</string>
    <string name="sql">SQL</string>
    <string name="data_structure">Data Structure</string>
    <string name="design_patterns">Design Patterns</string>
    <string name="algorithms">Algorithms</string>
    <string name="git">Git</string>
    <string name="mobile">Mobile</string>
    <string name="back_end">Backend</string>
    <string name="modules">Modules</string>
    <string name="front_end">Frontend</string>
    <string name="support">Support</string>
    <string name="interviews">Interviews</string>
    <string name="interviewers">Interviewers</string>
    <string name="candidate">Candidate</string>
    <string name="topics_items">Topics Items</string>
    <string name="ish_items">ISH Items</string>
    <string name="learn_items">Learn Items</string>
    <string name="manage_interviews_items">Manage Interviews</string>
    <string name="topics_items_describe">Questions for interviews</string>
    <string name="ish_items_describe">ISH question and answer</string>
    <string name="learn_items_describe">Read articles from the internet</string>
    <string name="manage_interviews_items_describe">"Allows you to establish and sustain an interview or to create a set of questions "</string>

    <string name="dashboard">Dashboard</string>
    <string name="admin">Admin</string>

    //settings
    <string name="language">language</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="select_language">Select language</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_photo">Edit photo</string>
    <string name="profile_photo">Profile photo</string>
    <string name="add_tag">Add tag</string>
    <string name="done">Done</string>
    <string name="deletetag">deleteTag</string>
    <string name="search">Search</string>
    <string name="set_question_text">Set question text</string>
    <string name="add_question">Add Question</string>
    <string name="validation_empty">The field is empty</string>
    <string name="edit_question">Edit Question</string>
    <string name="question">Question</string>
    <string name="add_answer">Add Answer</string>
    <string name="add_tags">Add Tags</string>
    <string name="set_answer_content">Set Answer Text</string>
    <string name="answer_deleted">The answer has been deleted</string>
    <string name="view_question">View Question</string>
    <string name="question_has_been_changed">The question has been changed</string>
    <string name="validate_question_content">The question must be at least 3 characters long</string>
    <string name="validate_tag_list">The question must have at least one tag</string>
    <string name="validate_correct_answer">The question must have the correct answer</string>
    <string name="all_answer_contain_content">All responses must contain content</string>
    <string name="validate_have_answer">The question must have at least one answer</string>
    <string name="question_has_been_deleted">The question has been deleted</string>
    <string name="question_is_not_complete">The question is not complete</string>
    <string name="profile">Profile</string>
    <string name="select_tags">Select Tags</string>
    <string name="select_tags_title">Select tags</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="technical_level">Technical Level</string>
    <string name="new_candidate">New Candidate</string>
    <string name="tags">Tags</string>
    <string name="prefered_technologies">Preferred Technologies</string>
    <string name="selected_tags">You are interested in:</string>
    <string name="name">Name:</string>
    <string name="anonymous">Anonymous</string>
    <string name="questions">questions</string>
    <string name="duplicate">Duplicate</string>
    <string name="cv">Candidate CV</string>
    <string name="candidate_has_been_added">Candidate has been added</string>
    <string name="delete_candidate_question">Do you want to delete this candidate?</string>
    <string name="add_candidate">Add Candidate</string>
    <string name="interviews_list">List of Interviews</string>
    <string name="candidate_has_been_changed">Candidate has been changed</string>
    <string name="validate_candidate_content">One or more fields are not completed</string>
    <string name="update_candidate">Update Candidate</string>
    <string name="list_of_candidates">List of Candidates</string>
    <string name="validate_tag_list_for_candidate">The candidate should have at least one tag</string>
    <string name="view_candidate">View Candidate</string>
    <string name="set_date">Set Date</string>
    <string name="delete_candidate">Delete Candidate</string>
    <string name="candidate_has_been_deleted">Candidate has been deleted</string>
    <string name="interview_was_saved">Interview was saved</string>
    <string name="interview_must_have_candidate">The interview must have a candidate</string>
    <string name="interview_must_have_interviewers">The interview must have at least one interviewer</string>
    <string name="interview_must_have_three_question">The interview must have a least three questions</string>
    <string name="interview_must_to_hve_one_tag">The interview must have a least one tag</string>
    <string name="interview_must_to_have_date">The interview must have a date</string>

    <string name="interview_must_to_have_interviewers">The interview must to have a least one interviewer</string>
    <string name="interiew_is_not_complete">The interview is not complete</string>
    <string name="add_interviewers">Add Interviewers</string>
    <string name="unknown">Unknown</string>
    <string name="strongly_disagree">Strongly disagree</string>
    <string name="disagree">Disagree</string>
    <string name="neither_agree_not_disagree">Neither agree nor disagree</string>
    <string name="agree">Agree</string>
    <string name="strongly_agree">Strongly agree</string>
    <string name="ask_desc">Ask questions related to ISH or the technologies which interest you</string>
    <string name="validate_preferred_technologies">The candidate should have at least one preferred technology.</string>
    <string name="validate_candidate_lastname">The candidate lastname should have at least 3 letters.</string>
    <string name="validate_candidate_firstname">The candidate fistname should have at least 3 letters.</string>
    <string name="validate_candidate_email">The candidate email is not valid.</string>
    <string name="validate_candidate_phoneNr">The candidate phone number is not valid.</string>
    <string name="validate_candidate_technicalLvl">The candidate technical level is not valid.</string>
    <string name="candidate_is_not_complete">The candidate is not complete</string>

    <!--interview-->
    <string name="add_interview">Add Interview</string>
    <string name="duplicate_interview">Duplicate Interview</string>
    <string name="edit_interview">Edit Interview</string>
    <string name="interview">Interview</string>
    <string name="add_prefTech">Add Technologies</string>

</resources>
