<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity"

   >


    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/profile_photo"
        app:srcCompat="@drawable/account" />

    <ImageButton
        android:id="@+id/addPicture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="125dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/edit_photo"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/add_photo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="168dp"
        android:layout_marginBottom="385dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:background="@drawable/rectangle"
        >


        <TextView
            android:id="@+id/name"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/anonymous"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="@dimen/app_name_size"
            android:textColor="@color/colorAccent"

            />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@+id/name"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/edit"
            android:background="@drawable/circle"
            android:contentDescription="@string/edit_name"/>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="@dimen/content_textsize"
        android:layout_marginTop="240dp"
        android:textColor="@color/colorAccent"
        android:text="@string/selected_tags" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_below="@+id/description"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        >


        <android.support.v7.widget.RecyclerView
            android:id="@+id/profile_tag_recycler_view"
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scrollbars="vertical"
            android:background="@drawable/tags_profile_background"

             />

        <ImageButton
            android:id="@+id/addTagButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/circle"
            android:contentDescription="@string/add_tag"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/add_tag" />


    </LinearLayout>



    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        android:text="@string/done"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextPrimary"/>


</RelativeLayout>