<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"


tools:context=".onboarding.OnboardingActivity">

<android.support.v4.view.ViewPager
    android:id="@+id/slideViewPager"
    android:layout_width="match_parent"
    android:layout_height="@dimen/viewpager"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true" />


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/relative_layout_buttons"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_gravity="bottom"
    android:adjustViewBounds="true"
    android:divider="@drawable/separator"
    android:showDividers="middle"
    android:orientation="horizontal"
    >

    <Button
        android:id="@+id/start_now_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/start_now"
        android:textColor="@android:color/black"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:id="@+id/indicator_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:orientation="horizontal">


    </LinearLayout>

    <Button
        android:id="@+id/finish_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/finish"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/next_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:tint="@color/colorPrimaryDark"
        android:contentDescription="@string/next"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

</RelativeLayout>



</RelativeLayout>